Install oh-my-fish plugin "git-flow"

--- a/roles/fish/tasks/main.yml
+++ b/roles/fish/tasks/main.yml
@@ -37,6 +37,7 @@
 - name: Install omf plugins
   shell: "omf install {{ item }}"
   with_items:
+    - git-flow
     - weather
 
 - name: Install font tap
