Change Node version to v6

--- a/roles/react/tasks/main.yml
+++ b/roles/react/tasks/main.yml
@@ -1,8 +1,8 @@
 ---
-- name: Change node version to v4
+- name: Change node version to v6
   shell: |
-    nvm install --lts=Argon
-    nvm use lts/Argon
+    nvm install --lts=boron
+    nvm use lts/boron
 
 - name: Install react-native
   npm:
