Install Spark from app store

--- a/roles/appstore/tasks/main.yml
+++ b/roles/appstore/tasks/main.yml
@@ -11,6 +11,7 @@
       - { name: "Logic Pro X", id: 634148309 }
       - { name: "Readmoo", id: 1051660169 }
       - { name: "Slack", id: 803453959 }
+      - { name: "Spark", id: 1176895641 }
       - { name: "Telegram", id: 747648890 }
       - { name: "Things 3", id: 904280696 }
       - { name: "Tweetbot", id: 557168941 }
