--- a/roles/fish/tasks/main.yml
+++ b/roles/fish/tasks/main.yml
@@ -15,6 +15,12 @@
   become: true
   become_user: root
 
+- name: Creates fish config directory
+  file:
+    path: "/Users/{{ ansible_ssh_user }}/.config/fish"
+    state: directory
+    recurse: yes
+
 - name: Configure fish
   template:
     src: config.fish.j2
