--- a/roles/bin/tasks/main.yml
+++ b/roles/bin/tasks/main.yml
@@ -1,3 +1,8 @@
+- name: Creates ~/bin directory
+  file:
+    path: "/Users/{{ ansible_ssh_user }}/bin"
+    state: directory
+
 - template:
     src: "{{ item }}"
     dest: "{{ ansible_env.HOME }}/bin/{{ item | basename | regex_replace('.j2','') }}"
