Install shellcheck, xmind, and pipenv

--- a/roles/homebrew/tasks/main.yml
+++ b/roles/homebrew/tasks/main.yml
@@ -17,6 +17,7 @@
     - name: postgresql
     - name: pstree
     - name: python3
+    - name: shellcheck
     - name: sqlite
     - name: terraform
     - name: tig
@@ -42,3 +43,4 @@
     - name: sublime-text
     - name: webstorm
     - name: welly
+    - name: xmind
