--- a/roles/sublime/tasks/main.yml
+++ b/roles/sublime/tasks/main.yml
@@ -7,3 +7,5 @@
   copy:
     src: Preferences.sublime-settings
     dest: "{{ user_setting }}/Preferences.sublime-settings"
+
+- include: anaconda.yml
