--- a/roles/homebrew/tasks/main.yml
+++ b/roles/homebrew/tasks/main.yml
@@ -33,14 +33,17 @@
   with_items:
     - name: dash
     - name: dropbox
+    - name: firefox
     - name: google-backup-and-sync
     - name: google-chrome
     - name: istat-menus
     - name: iterm2
+    - name: opera
     - name: pycharm
     - name: rescuetime
     - name: spectacle
     - name: ssh-tunnel-manager
+    - name: vivaldi
     - name: webstorm
     - name: welly
     - name: xmind
